--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "cheerio": "^0.22.0",
     "superagent": "^3.5.0",
     "superagent-charset": "^1.1.1",
-    "sync-request": "^4.0.1",
-    "xlsx": "^0.9.3"
+    "sync-request": "^4.0.1"
   }
 }
